# VelocityLighting

./: CmakeLists.txt
plugin/: CMakeLists.txt
plugin/UI/: index.html  package-lock.json  package.json  script.js  style.css
plugin/include/ThreeDSynth/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/DSP/: noiseGenerator.h  synthSound.h  synthVoice.h  waveGenerator.h
